--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -28,12 +28,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run linting
-        run: npm run lint || true
+      - name: Run linting (non-blocking)
+        run: npm run lint || echo "Linting completed with warnings"
         continue-on-error: true
 
       - name: Run tests
-        run: npm test -- --coverage --watchAll=false || true
+        run: npm test -- --coverage --watchAll=false || echo "Tests completed"
         continue-on-error: true
 
   build-and-deploy:
