--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_ORS_API_KEY=5b3ce3597851110001cf62488e21903f6f33420880b1ff6e9e9a7ae4
 VITE_API_BASE_URL=http://localhost:8000/api
+###> symfony/framework-bundle ###
+/.env
